--- a/App.xaml
+++ b/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application
-    x:Class="StuffRandomSelect.App"
+    x:Class="StaffRandomSelect.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:StuffRandomSelect"
+    xmlns:local="clr-namespace:StaffRandomSelect"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     StartupUri="MainWindow.xaml">
     <Application.Resources>
