--- a/List.xaml
+++ b/List.xaml
@@ -1,13 +1,14 @@
 ﻿<Page
+    x:Class="StaffRandomSelect.List"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Domain="clr-namespace:StaffRandomSelect.Domain"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:StaffRandomSelect"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:Domain="clr-namespace:StaffRandomSelect.Domain"
-    x:Class="StaffRandomSelect.List"
     Title="List"
+    d:DataContext="{d:DesignInstance Domain:ListModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     Background="{DynamicResource MaterialDesignPaper}"
@@ -17,7 +18,120 @@
     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     mc:Ignorable="d">
 
-    <ListView ItemsSource="{Binding Items1}">
+    <DataGrid
+        AutoGenerateColumns="False"
+        CanUserAddRows="False"
+        HeadersVisibility="All"
+        ItemsSource="{Binding StaffList}">
+        <!--<DataGrid.DataContext>
+            <Domain:ListModel />
+        </DataGrid.DataContext>-->
+        <!--<DataGrid.Resources>
+            <domain:BindingProxy
+                xmlns:domain="clr-namespace:MaterialDesignDemo.Domain"
+                x:Key="DataContextProxy"
+                Data="{Binding}" />
+        </DataGrid.Resources>-->
+        <DataGrid.Resources>
+            <Domain:ListContext x:Key="ListContextProxy" Context="{Binding}" />
+        </DataGrid.Resources>
+
+        <DataGrid.Columns>
+            <DataGridCheckBoxColumn
+                Binding="{Binding IsSelected, UpdateSourceTrigger=PropertyChanged}"
+                EditingElementStyle="{StaticResource MaterialDesignDataGridCheckBoxColumnEditingStyle}"
+                ElementStyle="{StaticResource MaterialDesignDataGridCheckBoxColumnStyle}">
+                <DataGridCheckBoxColumn.Header>
+                    <Border Background="Transparent">
+                        <CheckBox IsChecked="{Binding Context.IsAllStaffSelected, Source={StaticResource ListContextProxy}}" />
+                    </Border>
+                </DataGridCheckBoxColumn.Header>
+                <DataGridCheckBoxColumn.HeaderStyle>
+                    <Style BasedOn="{StaticResource MaterialDesignDataGridColumnHeader}" TargetType="{x:Type DataGridColumnHeader}">
+                        <Setter Property="HorizontalContentAlignment" Value="Center" />
+                    </Style>
+                </DataGridCheckBoxColumn.HeaderStyle>
+            </DataGridCheckBoxColumn>
+            <DataGridTextColumn
+                Binding="{Binding Name}"
+                EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnEditingStyle}"
+                ElementStyle="{StaticResource MaterialDesignDataGridTextColumnStyle}"
+                Header="名称" />
+            <!--  if you want to use the pop up style (MaterialDesignDataGridTextColumnPopupEditingStyle), you must use MaterialDataGridTextColumn  -->
+            <materialDesign:DataGridTextColumn
+                EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnPopupEditingStyle}"
+                ElementStyle="{StaticResource MaterialDesignDataGridTextColumnStyle}"
+                Header="稀有度">
+                <materialDesign:DataGridTextColumn.Binding>
+                    <Binding Path="Star">
+                        <!--<Binding.ValidationRules>
+                            <domain:NotEmptyValidationRule xmlns:domain="clr-namespace:MaterialDesignDemo.Domain" />
+                        </Binding.ValidationRules>-->
+                    </Binding>
+                </materialDesign:DataGridTextColumn.Binding>
+            </materialDesign:DataGridTextColumn>
+            <!--  set a max length to get an indicator in the editor  -->
+            <DataGridTextColumn
+                EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnEditingStyle}"
+                ElementStyle="{StaticResource MaterialDesignDataGridTextColumnStyle}"
+                Header="职业">
+                <DataGridTextColumn.Binding>
+                    <Binding Path="Career">
+                        <!--<Binding.ValidationRules>
+                            <domain:NotEmptyValidationRule xmlns:domain="clr-namespace:MaterialDesignDemo.Domain" />
+                        </Binding.ValidationRules>-->
+                    </Binding>
+                </DataGridTextColumn.Binding>
+            </DataGridTextColumn>
+            <!--<materialDesign:DataGridTextColumn
+                Width="120"
+                Binding="{Binding Numeric}"
+                EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnPopupEditingStyle}"
+                Header="Number with long header">
+                <DataGridTextColumn.HeaderStyle>
+                    <Style BasedOn="{StaticResource MaterialDesignDataGridColumnHeader}" TargetType="{x:Type DataGridColumnHeader}">
+                        <Setter Property="HorizontalContentAlignment" Value="Right" />
+                        <Setter Property="ContentTemplate">
+                            <Setter.Value>
+                                <DataTemplate>
+                                    <TextBlock
+                                        Text="{Binding}"
+                                        TextAlignment="Right"
+                                        TextWrapping="Wrap" />
+                                </DataTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </DataGridTextColumn.HeaderStyle>
+                <DataGridTextColumn.ElementStyle>
+                    <Style BasedOn="{StaticResource MaterialDesignDataGridTextColumnStyle}" TargetType="{x:Type TextBlock}">
+                        <Setter Property="HorizontalAlignment" Value="Right" />
+                    </Style>
+                </DataGridTextColumn.ElementStyle>
+            </materialDesign:DataGridTextColumn>
+            -->
+            <!--  use custom combo box column to get better combos. Use ItemsSourceBinding as your binding template to be applied to each combo  -->
+            <!--
+            <materialDesign:DataGridComboBoxColumn
+                Width="100"
+                Header="Food with long header"
+                IsEditable="True"
+                ItemsSourceBinding="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}, Path=DataContext.Foods}"
+                SelectedValueBinding="{Binding Food}">
+            -->
+            <!--Setting the editing element style allows access to all of the combo box's properties
+                      <materialDesign:MaterialDataGridComboBoxColumn.EditingElementStyle>
+                          <Style TargetType="ComboBox" BasedOn="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type ComboBox}, ResourceId=MaterialDataGridComboBoxColumnEditingStyle}}" >
+                              <Setter Property="IsEditable" Value="True" />
+                          </Style>
+                      </materialDesign:MaterialDataGridComboBoxColumn.EditingElementStyle>
+            -->
+            <!--
+            </materialDesign:DataGridComboBoxColumn>-->
+        </DataGrid.Columns>
+    </DataGrid>
+
+    <!--<ListView ItemsSource="{Binding Items1}">
         <ListView.View>
             <GridView>
                 <GridViewColumn DisplayMemberBinding="{Binding Code}" Header="Code" />
@@ -39,5 +153,6 @@
         <ListView.DataContext>
             <Domain:ListModel/>
         </ListView.DataContext>
-    </ListView>
+    </ListView>-->
+
 </Page>
