--- a/Input.xaml
+++ b/Input.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="StuffRandomSelect.Input"
+    x:Class="StaffRandomSelect.Input"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -40,6 +40,7 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <TextBlock
             Grid.Row="0"
@@ -60,11 +61,7 @@
             VerticalAlignment="Center"
             materialDesign:HintAssist.Hint="名称"
             FontFamily="Microsoft YaHei"
-            TextAlignment="Left">
-            <TextBox.Text>
-                <Binding Path="Name" UpdateSourceTrigger="PropertyChanged" />
-            </TextBox.Text>
-        </TextBox>
+            TextAlignment="Left" />
         <TextBlock
             Grid.Row="1"
             Grid.Column="0"
@@ -73,11 +70,32 @@
             FontFamily="Microsoft YaHei"
             FontWeight="Bold"
             TextAlignment="Right">
-            职阶：
+            稀有度：
+        </TextBlock>
+
+        <materialDesign:RatingBar
+            x:Name="StarBar"
+            Grid.Row="1"
+            Grid.Column="1"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Center"
+            Max="6"
+            Min="1"
+            ValueChanged="BasicRatingBar_ValueChanged"
+            Value="1" />
+        <TextBlock
+            Grid.Row="2"
+            Grid.Column="0"
+            Margin="0,10,10,10"
+            VerticalAlignment="Center"
+            FontFamily="Microsoft YaHei"
+            FontWeight="Bold"
+            TextAlignment="Right">
+            职业：
         </TextBlock>
         <ComboBox
             x:Name="ComboBox"
-            Grid.Row="1"
+            Grid.Row="2"
             Grid.Column="1"
             Margin="0,10,10,10"
             HorizontalAlignment="Left"
@@ -96,14 +114,14 @@
             <ComboBoxItem Content="特种" FontFamily="Microsoft YaHei" />
         </ComboBox>
         <Button
-            Grid.Row="2"
+            Grid.Row="3"
             Grid.ColumnSpan="2"
-            Width="75"
+            Width="100"
             Margin="0,20,0,20"
             materialDesign:ButtonAssist.CornerRadius="10"
             Click="Input_Click"
             IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"
-            Style="{StaticResource MaterialDesignRaisedButton}">
+            Style="{StaticResource MaterialDesignRaisedButton}" Cursor="Hand">
             <TextBlock
                 Width="auto"
                 FontWeight="Bold"
@@ -111,7 +129,7 @@
         </Button>
         <materialDesign:Snackbar
             x:Name="SnackbarOne"
-            Grid.Row="3"
+            Grid.Row="4"
             Grid.ColumnSpan="2"
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch"
