--- a/Input.xaml
+++ b/Input.xaml
@@ -58,10 +58,13 @@
             Grid.Column="1"
             MinWidth="100"
             Margin="0,10,10,10"
+            HorizontalAlignment="Left"
             VerticalAlignment="Center"
             materialDesign:HintAssist.Hint="名称"
+            Cursor="IBeam"
             FontFamily="Microsoft YaHei"
-            TextAlignment="Left" />
+            TextAlignment="Left"
+            TextWrapping="Wrap" />
         <TextBlock
             Grid.Row="1"
             Grid.Column="0"
