--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -25,13 +25,13 @@
             <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
         <Grid>
-            <StackPanel Margin="0,75,0,0">
+            <DockPanel Margin="0,75,0,0">
                 <Frame
                     x:Name="Frame"
                     Padding="16"
                     NavigationUIVisibility="Hidden"
                     Source="/Generate.xaml" />
-            </StackPanel>
+            </DockPanel>
 
             <materialDesign:DrawerHost
                 x:Name="DrawerHost"
