--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -17,15 +17,122 @@
     TextElement.Foreground="{DynamicResource MatesrialDesignBody}"
     mc:Ignorable="d">
     <Window.Resources />
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="1*" />
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*" />
-        </Grid.ColumnDefinitions>
-        <Grid>
-            <DockPanel Margin="0,75,0,0">
+
+
+
+    <materialDesign:DrawerHost
+        x:Name="DrawerHost"
+        HorizontalAlignment="Stretch"
+        BorderBrush="{DynamicResource MaterialDesignDivider}"
+        IsLeftDrawerOpen="{Binding ElementName=MenuToggleButton, Path=IsChecked}">
+
+        <materialDesign:DrawerHost.Style>
+            <Style BasedOn="{StaticResource {x:Type materialDesign:DrawerHost}}" TargetType="materialDesign:DrawerHost">
+                <Style.Triggers>
+                    <DataTrigger Binding="{Binding IsChecked, ElementName=BackgroundToggle}" Value="True">
+                        <Setter Property="OverlayBackground" Value="{DynamicResource PrimaryHueMidBrush}" />
+                    </DataTrigger>
+                </Style.Triggers>
+            </Style>
+        </materialDesign:DrawerHost.Style>
+
+        <materialDesign:DrawerHost.LeftDrawerContent>
+            <DockPanel MinWidth="120" LastChildFill="False">
+                <ToggleButton
+                    Width="40"
+                    Height="40"
+                    Margin="0,16,8,0"
+                    HorizontalAlignment="Right"
+                    DockPanel.Dock="Top"
+                    Foreground="#673ab7"
+                    IsChecked="{Binding ElementName=MenuToggleButton, Path=IsChecked, Mode=TwoWay}"
+                    Style="{StaticResource MaterialDesignHamburgerToggleButton}" />
+                <TextBlock
+                    Margin="4,4,4,10"
+                    HorizontalAlignment="Center"
+                    DockPanel.Dock="Top"
+                    Text="功能列表" />
+                <Button
+                    Margin="4"
+                    HorizontalAlignment="Center"
+                    Click="Change_To_Generate"
+                    Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}"
+                    CommandParameter="{x:Static Dock.Left}"
+                    Content="阵容生成"
+                    DockPanel.Dock="Top"
+                    FontFamily="Microsoft YaHei"
+                    FontWeight="Bold"
+                    Style="{DynamicResource MaterialDesignFlatButton}" />
+                <Button
+                    Margin="4"
+                    HorizontalAlignment="Center"
+                    Click="Change_To_Input"
+                    Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}"
+                    Content="录入干员"
+                    DockPanel.Dock="Top"
+                    FontFamily="Microsoft YaHei"
+                    FontWeight="Bold"
+                    Style="{DynamicResource MaterialDesignFlatButton}" />
+                <Button
+                    Margin="4"
+                    HorizontalAlignment="Center"
+                    Click="Change_To_List"
+                    Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}"
+                    Content="干员列表"
+                    Cursor="Hand"
+                    DockPanel.Dock="Top"
+                    FontFamily="Microsoft YaHei"
+                    FontWeight="Bold"
+                    Style="{DynamicResource MaterialDesignFlatButton}" />
+            </DockPanel>
+        </materialDesign:DrawerHost.LeftDrawerContent>
+
+
+        <DockPanel LastChildFill="True">
+            <materialDesign:ColorZone
+                Padding="16"
+                materialDesign:ShadowAssist.ShadowDepth="Depth3"
+                ClipToBounds="False"
+                DockPanel.Dock="Top"
+                Mode="PrimaryLight">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock
+                        x:Name="Title"
+                        Grid.ColumnSpan="2"
+                        Margin="16,0,0,0"
+                        VerticalAlignment="Center"
+                        FontFamily="Microsoft YaHei"
+                        FontWeight="Bold"
+                        Foreground="White"
+                        Style="{StaticResource MaterialDesignHeadline5TextBlock}"
+                        Text="阵容生成"
+                        TextAlignment="Center" />
+
+                    <ToggleButton
+                        x:Name="MenuToggleButton"
+                        Width="40"
+                        Height="40"
+                        AutomationProperties.Name="HamburgerToggleButton"
+                        Foreground="White"
+                        IsChecked="False"
+                        Style="{StaticResource MaterialDesignHamburgerToggleButton}" />
+
+                    <!--<Button
+                        Width="40"
+                        Height="40"
+                        Command="{x:Static materialDesign:DrawerHost.OpenDrawerCommand}"
+                        CommandParameter="{x:Static Dock.Left}"
+                        Content="{materialDesign:PackIcon Kind=Menu,
+                                                          Size=30}"
+                        Style="{StaticResource MaterialDesignFloatingActionButton}" />-->
+                </Grid>
+            </materialDesign:ColorZone>
+            <DockPanel DockPanel.Dock="Top">
                 <Frame
                     x:Name="Frame"
                     Padding="16"
@@ -33,91 +140,8 @@
                     Source="/Generate.xaml" />
             </DockPanel>
 
-            <materialDesign:DrawerHost
-                x:Name="DrawerHost"
-                HorizontalAlignment="Stretch"
-                BorderBrush="{DynamicResource MaterialDesignDivider}">
-                <materialDesign:ColorZone
-                    Padding="16"
-                    materialDesign:ShadowAssist.ShadowDepth="Depth3"
-                    ClipToBounds="False"
-                    CornerRadius="0 0 10 10"
-                    Mode="PrimaryLight">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="auto" />
-                            <ColumnDefinition />
-                        </Grid.ColumnDefinitions>
 
-                        <TextBlock
-                            x:Name="Title"
-                            Grid.ColumnSpan="2"
-                            Margin="16,0,0,0"
-                            VerticalAlignment="Center"
-                            FontFamily="Microsoft YaHei"
-                            FontWeight="Bold"
-                            Foreground="White"
-                            Style="{StaticResource MaterialDesignHeadline5TextBlock}"
-                            Text="阵容生成"
-                            TextAlignment="Center" />
-                        <Button
-                            Width="40"
-                            Height="40"
-                            Command="{x:Static materialDesign:DrawerHost.OpenDrawerCommand}"
-                            CommandParameter="{x:Static Dock.Left}"
-                            Content="{materialDesign:PackIcon Kind=Menu,
-                                                              Size=30}"
-                            Style="{StaticResource MaterialDesignFloatingActionButton}" />
-                    </Grid>
-                </materialDesign:ColorZone>
-                <materialDesign:DrawerHost.Style>
-                    <Style BasedOn="{StaticResource {x:Type materialDesign:DrawerHost}}" TargetType="materialDesign:DrawerHost">
-                        <Style.Triggers>
-                            <DataTrigger Binding="{Binding IsChecked, ElementName=BackgroundToggle}" Value="True">
-                                <Setter Property="OverlayBackground" Value="{DynamicResource PrimaryHueMidBrush}" />
-                            </DataTrigger>
-                        </Style.Triggers>
-                    </Style>
-                </materialDesign:DrawerHost.Style>
+        </DockPanel>
+    </materialDesign:DrawerHost>
 
-                <materialDesign:DrawerHost.LeftDrawerContent>
-                    <StackPanel Margin="16">
-                        <TextBlock
-                            Margin="4,4,4,10"
-                            HorizontalAlignment="Center"
-                            Text="功能列表" />
-                        <Button
-                            Margin="4"
-                            HorizontalAlignment="Center"
-                            Click="Change_To_Generate"
-                            Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}"
-                            CommandParameter="{x:Static Dock.Left}"
-                            Content="阵容生成"
-                            FontFamily="Microsoft YaHei"
-                            FontWeight="Bold"
-                            Style="{DynamicResource MaterialDesignFlatButton}" />
-                        <Button
-                            Margin="4"
-                            HorizontalAlignment="Center"
-                            Click="Change_To_Input"
-                            Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}"
-                            Content="录入干员"
-                            FontFamily="Microsoft YaHei"
-                            FontWeight="Bold"
-                            Style="{DynamicResource MaterialDesignFlatButton}" />
-                        <Button
-                            Margin="4"
-                            HorizontalAlignment="Center"
-                            Click="Change_To_List"
-                            Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}"
-                            Content="干员列表"
-                            FontFamily="Microsoft YaHei"
-                            FontWeight="Bold"
-                            Style="{DynamicResource MaterialDesignFlatButton}" />
-                    </StackPanel>
-                </materialDesign:DrawerHost.LeftDrawerContent>
-            </materialDesign:DrawerHost>
-
-        </Grid>
-    </Grid>
 </Window>
