--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -41,7 +41,7 @@
                 <ToggleButton
                     Width="40"
                     Height="40"
-                    Margin="0,16,8,0"
+                    Margin="0,16,8,16"
                     HorizontalAlignment="Right"
                     DockPanel.Dock="Top"
                     Foreground="#673ab7"
@@ -51,6 +51,8 @@
                     Margin="4,4,4,10"
                     HorizontalAlignment="Center"
                     DockPanel.Dock="Top"
+                    FontFamily="Microsoft YaHei"
+                    FontWeight="Bold"
                     Text="功能列表" />
                 <Button
                     Margin="4"
@@ -59,6 +61,7 @@
                     Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}"
                     CommandParameter="{x:Static Dock.Left}"
                     Content="阵容生成"
+                    Cursor="Hand"
                     DockPanel.Dock="Top"
                     FontFamily="Microsoft YaHei"
                     FontWeight="Bold"
@@ -69,6 +72,7 @@
                     Click="Change_To_Input"
                     Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}"
                     Content="录入干员"
+                    Cursor="Hand"
                     DockPanel.Dock="Top"
                     FontFamily="Microsoft YaHei"
                     FontWeight="Bold"
@@ -121,23 +125,10 @@
                         Foreground="White"
                         IsChecked="False"
                         Style="{StaticResource MaterialDesignHamburgerToggleButton}" />
-
-                    <!--<Button
-                        Width="40"
-                        Height="40"
-                        Command="{x:Static materialDesign:DrawerHost.OpenDrawerCommand}"
-                        CommandParameter="{x:Static Dock.Left}"
-                        Content="{materialDesign:PackIcon Kind=Menu,
-                                                          Size=30}"
-                        Style="{StaticResource MaterialDesignFloatingActionButton}" />-->
                 </Grid>
             </materialDesign:ColorZone>
             <DockPanel DockPanel.Dock="Top">
-                <Frame
-                    x:Name="Frame"
-                    Padding="16"
-                    NavigationUIVisibility="Hidden"
-                    Source="/Generate.xaml" />
+                <ContentControl x:Name="ContentControl" Margin="16" />
             </DockPanel>
 
 
