--- a/Generate.xaml
+++ b/Generate.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<ContentControl
     x:Class="StaffRandomSelect.Generate"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -6,7 +6,6 @@
     xmlns:local="clr-namespace:StuffRandomSelect"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="Default"
     d:DataContext="{Binding RelativeSource={RelativeSource Self}}"
     d:DesignHeight="450"
     d:DesignWidth="800"
@@ -17,14 +16,14 @@
     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     mc:Ignorable="d">
 
-    <Page.Resources>
+    <ContentControl.Resources>
         <Style TargetType="DockPanel">
             <Setter Property="Margin" Value="0,20,0,20" />
         </Style>
         <Style TargetType="StackPanel">
             <Setter Property="Margin" Value="0,20,0,20" />
         </Style>
-    </Page.Resources>
+    </ContentControl.Resources>
 
     <DockPanel Width="auto" LastChildFill="True">
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
@@ -85,7 +84,7 @@
                                         <TextBlock
                                             FontFamily="Microsoft YaHei"
                                             FontWeight="Bold"
-                                            Foreground="#FFAB68BD"
+                                            Foreground="#673ab7"
                                             Text="{Binding}"
                                             TextAlignment="Center"
                                             TextWrapping="Wrap" />
@@ -118,7 +117,7 @@
                                         <TextBlock
                                             FontFamily="Microsoft YaHei"
                                             FontWeight="Bold"
-                                            Foreground="#FFAB68BD"
+                                            Foreground="#673ab7"
                                             Text="{Binding}"
                                             TextAlignment="Center"
                                             TextWrapping="Wrap" />
@@ -151,7 +150,7 @@
                                         <TextBlock
                                             FontFamily="Microsoft YaHei"
                                             FontWeight="Bold"
-                                            Foreground="#FFAB68BD"
+                                            Foreground="#673ab7"
                                             Text="{Binding}"
                                             TextAlignment="Center"
                                             TextWrapping="Wrap" />
@@ -171,4 +170,4 @@
             </DataGrid.Columns>
         </DataGrid>
     </DockPanel>
-</Page>
+</ContentControl>
