--- a/Input.xaml
+++ b/Input.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<ContentControl
     x:Class="StaffRandomSelect.Input"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -6,7 +6,6 @@
     xmlns:local="clr-namespace:StuffRandomSelect"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="Input"
     d:DesignHeight="450"
     d:DesignWidth="800"
     Background="{DynamicResource MaterialDesignPaper}"
@@ -16,7 +15,7 @@
     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     mc:Ignorable="d">
 
-    <Page.Resources>
+    <ContentControl.Resources>
         <Style TargetType="StackPanel">
             <Setter Property="Margin" Value="0,20,0,20" />
         </Style>
@@ -29,7 +28,7 @@
         <Style TargetType="Button">
             <Setter Property="Margin" Value="0,20,0,20" />
         </Style>
-    </Page.Resources>
+    </ContentControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -162,4 +161,4 @@
             IsActive="False"
             Message="添加成功" />
     </Grid>
-</Page>
+</ContentControl>
