--- a/List.xaml
+++ b/List.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+﻿<ContentControl
     x:Class="StaffRandomSelect.List"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -7,7 +7,6 @@
     xmlns:local="clr-namespace:StaffRandomSelect"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="List"
     d:DataContext="{d:DesignInstance Domain:ListModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
@@ -18,27 +17,19 @@
     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     mc:Ignorable="d">
 
-
     <DataGrid
         AutoGenerateColumns="False"
         CanUserAddRows="False"
         ItemsSource="{Binding StaffList}">
-        <!--<DataGrid.DataContext>
-            <Domain:ListModel />
-        </DataGrid.DataContext>-->
-        <!--<DataGrid.Resources>
-            <domain:BindingProxy
-                xmlns:domain="clr-namespace:MaterialDesignDemo.Domain"
-                x:Key="DataContextProxy"
-                Data="{Binding}" />
-        </DataGrid.Resources>-->
+
         <DataGrid.Resources>
             <Domain:ListContext x:Key="ListContextProxy" Context="{Binding}" />
+            <Domain:NotEmptyValidationRule x:Key="rule" />
         </DataGrid.Resources>
 
         <DataGrid.Columns>
             <DataGridCheckBoxColumn
-                Width="*"
+                Width="1*"
                 Binding="{Binding IsSelected, UpdateSourceTrigger=PropertyChanged}"
                 EditingElementStyle="{StaticResource MaterialDesignDataGridCheckBoxColumnEditingStyle}"
                 ElementStyle="{StaticResource MaterialDesignDataGridCheckBoxColumnStyle}">
@@ -53,81 +44,19 @@
                     </Style>
                 </DataGridCheckBoxColumn.HeaderStyle>
             </DataGridCheckBoxColumn>
-            <DataGridTextColumn
-                Width="*"
-                Binding="{Binding Name}"
-                EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnEditingStyle}"
-                Header="名称">
-                <DataGridTextColumn.HeaderStyle>
-                    <Style BasedOn="{StaticResource MaterialDesignDataGridColumnHeader}" TargetType="{x:Type DataGridColumnHeader}">
-                        <Setter Property="HorizontalContentAlignment" Value="Center" />
-                        <Setter Property="ContentTemplate">
-                            <Setter.Value>
-                                <DataTemplate>
-                                    <TextBlock
-                                        FontFamily="Microsoft YaHei"
-                                        FontWeight="Bold"
-                                        Foreground="Orange"
-                                        Text="{Binding}"
-                                        TextAlignment="Center"
-                                        TextWrapping="Wrap" />
-                                </DataTemplate>
-                            </Setter.Value>
-                        </Setter>
-                    </Style>
-                </DataGridTextColumn.HeaderStyle>
-                <DataGridTextColumn.ElementStyle>
-                    <Style BasedOn="{StaticResource MaterialDesignDataGridTextColumnStyle}" TargetType="{x:Type TextBlock}">
-                        <Setter Property="HorizontalAlignment" Value="Center" />
-                        <Setter Property="TextAlignment" Value="Center" />
-                        <Setter Property="FontFamily" Value="Microsoft YaHei" />
-                    </Style>
-                </DataGridTextColumn.ElementStyle>
-            </DataGridTextColumn>
-            <!--  if you want to use the pop up style (MaterialDesignDataGridTextColumnPopupEditingStyle), you must use MaterialDataGridTextColumn  -->
+
             <materialDesign:DataGridTextColumn
-                Width="*"
-                EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnPopupEditingStyle}"
-                Header="稀有度">
-                <DataGridTextColumn.HeaderStyle>
-                    <Style BasedOn="{StaticResource MaterialDesignDataGridColumnHeader}" TargetType="{x:Type DataGridColumnHeader}">
-                        <Setter Property="HorizontalContentAlignment" Value="Center" />
-                        <Setter Property="ContentTemplate">
-                            <Setter.Value>
-                                <DataTemplate>
-                                    <TextBlock
-                                        FontFamily="Microsoft YaHei"
-                                        FontWeight="Bold"
-                                        Foreground="Orange"
-                                        Text="{Binding}"
-                                        TextAlignment="Center"
-                                        TextWrapping="Wrap" />
-                                </DataTemplate>
-                            </Setter.Value>
-                        </Setter>
-                    </Style>
-                </DataGridTextColumn.HeaderStyle>
-                <DataGridTextColumn.ElementStyle>
-                    <Style BasedOn="{StaticResource MaterialDesignDataGridTextColumnStyle}" TargetType="{x:Type TextBlock}">
-                        <Setter Property="HorizontalAlignment" Value="Center" />
-                        <Setter Property="TextAlignment" Value="Center" />
-                        <Setter Property="FontFamily" Value="Microsoft YaHei" />
-                    </Style>
-                </DataGridTextColumn.ElementStyle>
+                x:Name="NameRegion"
+                Width="2*"
+                Header="名称">
                 <materialDesign:DataGridTextColumn.Binding>
-                    <Binding Path="Star">
-                        <!--<Binding.ValidationRules>
-                            <domain:NotEmptyValidationRule xmlns:domain="clr-namespace:MaterialDesignDemo.Domain" />
-                        </Binding.ValidationRules>-->
+                    <Binding Mode="TwoWay" Path="Name">
+                        <Binding.ValidationRules>
+                            <Domain:NotEmptyValidationRule />
+                        </Binding.ValidationRules>
                     </Binding>
                 </materialDesign:DataGridTextColumn.Binding>
-            </materialDesign:DataGridTextColumn>
-            <!--  set a max length to get an indicator in the editor  -->
-            <DataGridTextColumn
-                Width="*"
-                EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnEditingStyle}"
-                Header="职业">
-                <DataGridTextColumn.HeaderStyle>
+                <materialDesign:DataGridTextColumn.HeaderStyle>
                     <Style BasedOn="{StaticResource MaterialDesignDataGridColumnHeader}" TargetType="{x:Type DataGridColumnHeader}">
                         <Setter Property="HorizontalContentAlignment" Value="Center" />
                         <Setter Property="ContentTemplate">
@@ -144,99 +73,134 @@
                             </Setter.Value>
                         </Setter>
                     </Style>
-                </DataGridTextColumn.HeaderStyle>
-                <DataGridTextColumn.ElementStyle>
+                </materialDesign:DataGridTextColumn.HeaderStyle>
+                <materialDesign:DataGridTextColumn.ElementStyle>
                     <Style BasedOn="{StaticResource MaterialDesignDataGridTextColumnStyle}" TargetType="{x:Type TextBlock}">
                         <Setter Property="HorizontalAlignment" Value="Center" />
                         <Setter Property="TextAlignment" Value="Center" />
                         <Setter Property="FontFamily" Value="Microsoft YaHei" />
                     </Style>
-                </DataGridTextColumn.ElementStyle>
-                <DataGridTextColumn.Binding>
-                    <Binding Path="Career">
-                        <!--<Binding.ValidationRules>
-                            <domain:NotEmptyValidationRule xmlns:domain="clr-namespace:MaterialDesignDemo.Domain" />
-                        </Binding.ValidationRules>-->
-                    </Binding>
-                </DataGridTextColumn.Binding>
-            </DataGridTextColumn>
-            <!--<materialDesign:DataGridTextColumn
-                Width="120"
-                Binding="{Binding Numeric}"
-                EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnPopupEditingStyle}"
-                Header="Number with long header">
-                <DataGridTextColumn.HeaderStyle>
+                </materialDesign:DataGridTextColumn.ElementStyle>
+                <materialDesign:DataGridTextColumn.EditingElementStyle>
+                    <Style BasedOn="{StaticResource MaterialDesignDataGridTextColumnEditingStyle}" TargetType="{x:Type TextBox}">
+                        <Setter Property="HorizontalAlignment" Value="Stretch" />
+                        <Setter Property="HorizontalContentAlignment" Value="Center" />
+                        <Setter Property="TextAlignment" Value="Center" />
+                        <Setter Property="FontFamily" Value="Microsoft YaHei" />
+                    </Style>
+                </materialDesign:DataGridTextColumn.EditingElementStyle>
+            </materialDesign:DataGridTextColumn>
+            <!--  if you want to use the pop up style (MaterialDesignDataGridTextColumnPopupEditingStyle), you must use MaterialDataGridTextColumn  -->
+
+            <materialDesign:DataGridComboBoxColumn
+                x:Name="StarColumn"
+                Width="2*"
+                Header="稀有度"
+                IsEditable="False"
+                SelectedValueBinding="{Binding Star, Mode=TwoWay}">
+
+                <materialDesign:DataGridComboBoxColumn.EditingElementStyle>
+                    <Style BasedOn="{StaticResource MaterialDesignDataGridComboBox}" TargetType="ComboBox">
+                        <Setter Property="IsEditable" Value="True" />
+                        <Setter Property="FontFamily" Value="Microsoft YaHei" />
+                        <Setter Property="HorizontalAlignment" Value="Stretch" />
+                        <Setter Property="HorizontalContentAlignment" Value="Center" />
+                        <Setter Property="VerticalAlignment" Value="Center" />
+                        <Setter Property="ItemContainerStyle">
+                            <Setter.Value>
+                                <Style BasedOn="{StaticResource MaterialDesignComboBoxItemSelectedCollapsedStyle}" TargetType="ComboBoxItem">
+                                    <Setter Property="HorizontalAlignment" Value="Stretch" />
+                                    <Setter Property="HorizontalContentAlignment" Value="Center" />
+                                </Style>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </materialDesign:DataGridComboBoxColumn.EditingElementStyle>
+
+                <DataGridComboBoxColumn.ElementStyle>
+                    <Style TargetType="{x:Type ComboBox}">
+                        <Setter Property="HorizontalAlignment" Value="Stretch" />
+                        <Setter Property="HorizontalContentAlignment" Value="Center" />
+                        <Setter Property="VerticalAlignment" Value="Center" />
+                        <Setter Property="FontFamily" Value="Microsoft YaHei" />
+                    </Style>
+                </DataGridComboBoxColumn.ElementStyle>
+
+                <DataGridComboBoxColumn.HeaderStyle>
                     <Style BasedOn="{StaticResource MaterialDesignDataGridColumnHeader}" TargetType="{x:Type DataGridColumnHeader}">
-                        <Setter Property="HorizontalContentAlignment" Value="Right" />
+                        <Setter Property="HorizontalContentAlignment" Value="Center" />
                         <Setter Property="ContentTemplate">
                             <Setter.Value>
                                 <DataTemplate>
                                     <TextBlock
+                                        FontFamily="Microsoft YaHei"
+                                        FontWeight="Bold"
+                                        Foreground="Orange"
                                         Text="{Binding}"
-                                        TextAlignment="Right"
+                                        TextAlignment="Center"
                                         TextWrapping="Wrap" />
                                 </DataTemplate>
                             </Setter.Value>
                         </Setter>
                     </Style>
-                </DataGridTextColumn.HeaderStyle>
-                <DataGridTextColumn.ElementStyle>
-                    <Style BasedOn="{StaticResource MaterialDesignDataGridTextColumnStyle}" TargetType="{x:Type TextBlock}">
-                        <Setter Property="HorizontalAlignment" Value="Right" />
-                    </Style>
-                </DataGridTextColumn.ElementStyle>
-            </materialDesign:DataGridTextColumn>
-            -->
-            <!--  use custom combo box column to get better combos. Use ItemsSourceBinding as your binding template to be applied to each combo  -->
-            <!--
+                </DataGridComboBoxColumn.HeaderStyle>
+            </materialDesign:DataGridComboBoxColumn>
+
+
+
+
+
+
             <materialDesign:DataGridComboBoxColumn
-                Width="100"
-                Header="Food with long header"
-                IsEditable="True"
-                ItemsSourceBinding="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}, Path=DataContext.Foods}"
-                SelectedValueBinding="{Binding Food}">
-            -->
-            <!--Setting the editing element style allows access to all of the combo box's properties
-                      <materialDesign:MaterialDataGridComboBoxColumn.EditingElementStyle>
-                          <Style TargetType="ComboBox" BasedOn="{StaticResource {ComponentResourceKey TypeInTargetAssembly={x:Type ComboBox}, ResourceId=MaterialDataGridComboBoxColumnEditingStyle}}" >
-                              <Setter Property="IsEditable" Value="True" />
-                          </Style>
-                      </materialDesign:MaterialDataGridComboBoxColumn.EditingElementStyle>
-            -->
-            <!--
-            </materialDesign:DataGridComboBoxColumn>-->
+                x:Name="ComboBoxColumn"
+                Width="2*"
+                Header="职业"
+                IsEditable="False"
+                SelectedValueBinding="{Binding Career, Mode=TwoWay}">
+                <materialDesign:DataGridComboBoxColumn.EditingElementStyle>
+                    <Style BasedOn="{StaticResource MaterialDesignDataGridComboBox}" TargetType="ComboBox">
+                        <Setter Property="IsEditable" Value="True" />
+                        <Setter Property="FontFamily" Value="Microsoft YaHei" />
+                        <Setter Property="HorizontalAlignment" Value="Stretch" />
+                        <Setter Property="HorizontalContentAlignment" Value="Center" />
+                        <Setter Property="VerticalAlignment" Value="Center" />
+                        <Setter Property="ItemContainerStyle">
+                            <Setter.Value>
+                                <Style BasedOn="{StaticResource MaterialDesignComboBoxItemSelectedCollapsedStyle}" TargetType="ComboBoxItem">
+                                    <Setter Property="HorizontalAlignment" Value="Stretch" />
+                                    <Setter Property="HorizontalContentAlignment" Value="Center" />
+                                </Style>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </materialDesign:DataGridComboBoxColumn.EditingElementStyle>
+
+                <materialDesign:DataGridComboBoxColumn.ElementStyle>
+                    <Style TargetType="{x:Type ComboBox}">
+                        <Setter Property="HorizontalAlignment" Value="Center" />
+                        <Setter Property="VerticalAlignment" Value="Center" />
+                        <Setter Property="FontFamily" Value="Microsoft YaHei" />
+                    </Style>
+                </materialDesign:DataGridComboBoxColumn.ElementStyle>
+                <materialDesign:DataGridComboBoxColumn.HeaderStyle>
+                    <Style BasedOn="{StaticResource MaterialDesignDataGridColumnHeader}" TargetType="{x:Type DataGridColumnHeader}">
+                        <Setter Property="HorizontalAlignment" Value="Center" />
+                        <Setter Property="ContentTemplate">
+                            <Setter.Value>
+                                <DataTemplate>
+                                    <TextBlock
+                                        FontFamily="Microsoft YaHei"
+                                        FontWeight="Bold"
+                                        Foreground="Orange"
+                                        Text="{Binding}"
+                                        TextAlignment="Center"
+                                        TextWrapping="Wrap" />
+                                </DataTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </materialDesign:DataGridComboBoxColumn.HeaderStyle>
+            </materialDesign:DataGridComboBoxColumn>
         </DataGrid.Columns>
     </DataGrid>
-
-    <!--<ListView ItemsSource="{Binding Items1}">
-        <ListView.View>
-            <GridView>
-                <GridViewColumn DisplayMemberBinding="{Binding Name}" Header="名称">
-                    <GridViewColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBlock HorizontalAlignment="Center" TextAlignment="Center" />
-                        </DataTemplate>
-                    </GridViewColumn.CellTemplate>
-                </GridViewColumn>
-                <GridViewColumn DisplayMemberBinding="{Binding Star}" Header="稀有度">
-                    <GridViewColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBlock HorizontalAlignment="Center" TextAlignment="Center" />
-                        </DataTemplate>
-                    </GridViewColumn.CellTemplate>
-                </GridViewColumn>
-                <GridViewColumn DisplayMemberBinding="{Binding Career}" Header="职业">
-                    <GridViewColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBlock HorizontalAlignment="Center" TextAlignment="Center" />
-                        </DataTemplate>
-                    </GridViewColumn.CellTemplate>
-                </GridViewColumn>
-            </GridView>
-        </ListView.View>
-        <ListView.DataContext>
-            <Domain:ListModel />
-        </ListView.DataContext>
-    </ListView>-->
-
-</Page>
+</ContentControl>
