实现等级显示

--- a/Input.xaml
+++ b/Input.xaml
@@ -3,7 +3,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:StuffRandomSelect"
+    xmlns:input="clr-namespace:System.Windows.Input;assembly=PresentationCore"
+    xmlns:local="clr-namespace:StaffRandomSelect"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="450"
@@ -114,13 +115,14 @@
                 VerticalAlignment="Center"
                 HorizontalContentAlignment="Center"
                 VerticalContentAlignment="Center"
-                materialDesign:HintAssist.Hint="2"
+                input:InputMethod.IsInputMethodEnabled="False"
                 Cursor="IBeam"
                 DockPanel.Dock="Left"
                 FontFamily="Microsoft YaHei"
-                KeyDown="EliteTextBox_KeyDown"
+                LostFocus="EliteTextBox_LostFocus"
+                PreviewKeyDown="EliteTextBox_KeyDown"
+                Text="2"
                 TextAlignment="Center"
-                TextInput="EliteTextBox_TextInput"
                 TextWrapping="Wrap" />
             <TextBlock
                 VerticalAlignment="Center"
@@ -135,10 +137,13 @@
                 VerticalAlignment="Center"
                 HorizontalContentAlignment="Center"
                 VerticalContentAlignment="Center"
-                materialDesign:HintAssist.Hint="1"
+                input:InputMethod.IsInputMethodEnabled="False"
                 Cursor="IBeam"
                 DockPanel.Dock="Left"
                 FontFamily="Microsoft YaHei"
+                LostFocus="RankTextBox_LostFocus"
+                PreviewKeyDown="RankTextBox_PreviewKeyDown"
+                Text="1"
                 TextAlignment="Center"
                 TextWrapping="Wrap" />
         </DockPanel>
